Add internalModuleProxy feature flag for golang in 1es-redirect.yml

--- a/eng/pipelines/templates/1es-redirect.yml
+++ b/eng/pipelines/templates/1es-redirect.yml
@@ -28,6 +28,10 @@ extends:
       ${{ if parameters.AutoBaseline }}:
         featureFlags:
           autoBaseline: true
+    featureFlags:
+      golang:
+        internalModuleProxy:
+          enabled: true
     sdl:
       ${{ if parameters.AutoBaseline }}:
         autoBaseline:
