Added a GOPROXY variable in globals.yml to correctly download Golang tools in pipeline runs

--- a/eng/pipelines/templates/variables/globals.yml
+++ b/eng/pipelines/templates/variables/globals.yml
@@ -2,4 +2,5 @@ variables:
   OfficialBuildId: $(Build.BuildNumber)
   skipComponentGovernanceDetection: true
   nugetMultiFeedWarnLevel: 'none'
-  GDN_SUPPRESS_FORKED_BUILD_WARNING: true
+  GDN_SUPPRESS_FORKED_BUILD_WARNING: true  
+  GOPROXY: 'http://localhost:5000'
