--- a/servers/Azure.Mcp.Server/changelog-entries/1770758462470.yaml
+++ b/servers/Azure.Mcp.Server/changelog-entries/1770758462470.yaml
@@ -1,3 +1,3 @@
 changes:
   - section: "Other Changes"
-    description: "Added CPU architecture to captured telemetry"
+    description: "Added processor architecture to captured telemetry"
