--- a/eng/pipelines/templates/jobs/release.yml
+++ b/eng/pipelines/templates/jobs/release.yml
@@ -88,6 +88,12 @@ jobs:
       DeploymentEnvironment: 'public'
       ServerName: ${{ parameters.ServerName }}
       DependsOn: TagRepository
+- ${{ else }}:
+  - job: PublishACR
+    displayName: "Publishing top ACR (skipped)"
+    steps:
+    - script: echo "ACR publishing skipped"
+      displayName: "Skipped"
 
 - template: /eng/pipelines/templates/jobs/update-mcp-repository.yml
   parameters:
@@ -96,7 +102,8 @@ jobs:
     - PublishNugetPackage
     - PublishNpm
     - PublishPyPI
-    
+    - PublishACR
+
 - job: UpdatePackageVersion
   displayName: "Update Package Versions"
   condition: and(succeeded(), ne(variables['Skip.UpdatePackageVersion'], 'true'))
