--- a/servers/Azure.Mcp.Server/changelog-entries/1770772586899.yaml
+++ b/servers/Azure.Mcp.Server/changelog-entries/1770772586899.yaml
@@ -1,7 +1,7 @@
 changes:
-  - section: "Features Added"
+  - section: "Breaking Changes"
     description: |
-      Consolidated KeyVault get/list commands:
-      - keyvault_key_get: Now supports both getting a specific key and listing all keys
-      - keyvault_secret_get: Now supports both getting a specific secret and listing all secrets
-      - keyvault_certificate_get: Now supports both getting a specific certificate and listing all certificates
+      Consolidated KeyVault get/list commands - separate list commands removed:
+      - Removed keyvault_key_list - use keyvault_key_get without providing a key name
+      - Removed keyvault_secret_list - use keyvault_secret_get without providing a secret name  
+      - Removed keyvault_certificate_list - use keyvault_certificate_get without providing a certificate name
