--- a/eng/pipelines/templates/jobs/release.yml
+++ b/eng/pipelines/templates/jobs/release.yml
@@ -7,6 +7,8 @@ parameters:
   type: boolean
 - name: PackageVSIX
   type: boolean
+- name: PackagePyPI
+  type: boolean
 - name: IsTestPipeline
   type: boolean
 
@@ -55,11 +57,12 @@ jobs:
     IncludeNative: ${{ parameters.IncludeNative }}
     DependsOn: TagRepository
 
-- template: /eng/pipelines/templates/jobs/pypi/release-pypi.yml
-  parameters:
-    ServerName: ${{ parameters.ServerName }}
-    IncludeNative: ${{ parameters.IncludeNative }}
-    DependsOn: TagRepository
+- ${{ if parameters.PackagePyPI }}:
+  - template: /eng/pipelines/templates/jobs/pypi/release-pypi.yml
+    parameters:
+      ServerName: ${{ parameters.ServerName }}
+      IncludeNative: ${{ parameters.IncludeNative }}
+      DependsOn: TagRepository
 
 - template: /eng/pipelines/templates/jobs/nuget/release-nuget.yml
   parameters:
@@ -86,6 +89,10 @@ jobs:
     DependsOn:
     - PublishNugetPackage
     - PublishNpm
+    - ${{ if parameters.PackageDocker }}:
+      - PublishACR
+    - ${{ if parameters.PackagePyPI }}:
+      - PublishPyPI
 
 - job: UpdatePackageVersion
   displayName: "Update Package Versions"
