Azure Compute - Disk Operations (#1559)
* initial generation

* Fix live tests

* Documentation update

* Make RG optional

* Fixing copilot comments

* Update consolidated tools to include new compute operation

* Update Azure.Mcp.Server.slnx

* Fix live test

* Fix naming to match existing resources

* Fix live tests

* Fix ordering of command

put in alphabetical order

* Fix consolidated list and update description

* Improve sanitization and update tag

* Add todo for location parameter and update changelog description

* Fix live tests

* Add readonly

--- a/tools/Azure.Mcp.Tools.Compute/src/Azure.Mcp.Tools.Compute.csproj
+++ b/tools/Azure.Mcp.Tools.Compute/src/Azure.Mcp.Tools.Compute.csproj
@@ -3,6 +3,10 @@
     <IsAotCompatible>true</IsAotCompatible>
   </PropertyGroup>
   <ItemGroup>
+    <EmbeddedResource Include="**\Resources\*.txt" />
+    <EmbeddedResource Include="**\Resources\*.json" />
+  </ItemGroup>
+  <ItemGroup>
     <ProjectReference Include="..\..\..\core\Azure.Mcp.Core\src\Azure.Mcp.Core.csproj" />
   </ItemGroup>
   <ItemGroup>
