--- a/eng/pipelines/templates/jobs/live-test.yml
+++ b/eng/pipelines/templates/jobs/live-test.yml
@@ -64,7 +64,6 @@ jobs:
   - task: AzurePowershell@5
     displayName: "Run tests (stdio) - az pwsh"
     env:
-      AZURE_TEST_MODE: 'live'
       SYSTEM_ACCESSTOKEN: $(System.AccessToken)
       AZURE_MCP_COLLECT_TELEMETRY: 'false'
     inputs:
@@ -86,12 +85,11 @@ jobs:
       ServiceConnection: azure-sdk-tests-public
       PersistOidcToken: true
       TestResourcesDirectory: $(Build.SourcesDirectory)/$(TestResourcesPath)
-      UseHttpTransport: true
+      AdditionalParameters: "@{ UseHttpTransport = true }"
 
   - task: AzurePowershell@5
     displayName: "Run tests (http) - az pwsh"
     env:
-      AZURE_TEST_MODE: 'live'
       SYSTEM_ACCESSTOKEN: $(System.AccessToken)
       AZURE_MCP_COLLECT_TELEMETRY: 'false'
     inputs:
