--- a/servers/Azure.Mcp.Server/changelog-entries/1770833341707.yaml
+++ b/servers/Azure.Mcp.Server/changelog-entries/1770833341707.yaml
@@ -1,3 +1,3 @@
 changes:
   - section: "Features Added"
-    description: "Added compute VM and VMSS create/update commands with smart workload-based defaults, supporting VM create, VM update, VMSS create, and VMSS update operations"
+    description: "Added Azure Compute tools for Virtual Machines (VMs) and Virtual Machine Scale Sets (VMSS). Includes VM get (list, details, instance view), VMSS get (list, details, VM instances), VM create/update with smart workload-based defaults, and VMSS create/update operations"
