--- a/core/Microsoft.Mcp.Core/src/Microsoft.Mcp.Core.csproj
+++ b/core/Microsoft.Mcp.Core/src/Microsoft.Mcp.Core.csproj
@@ -30,4 +30,8 @@
     <PackageReference Include="OpenTelemetry.Exporter.OpenTelemetryProtocol" />
     <PackageReference Include="System.CommandLine" />
   </ItemGroup>
+
+  <ItemGroup>
+    <InternalsVisibleTo Include="$(AssemblyName).UnitTests" />
+  </ItemGroup>
 </Project>
