Enable live test for remote MCP (#1630)
* Extend testing infrastructure for Remote MCP

* Update test resource Depolyment to allow http mode

* Update test-resources-post file to take UseHttpTransport

* Update live test pipeline to run test usig http transport

* Update test resource Depolyment to allow http mode

* Add LiveServerFixture

* Update test files to use LiveServer collection

* Use http client for initial server check

* Start new instance of server for each test class using a unique port

* Move http settngs in to useHttp block

* Catch InvalidOperationException

* Update deployment scripts

* Update post deployment script

* Update Should_get_specific_vm_details vmSize to match deployment details

--- a/eng/pipelines/templates/jobs/live-test.yml
+++ b/eng/pipelines/templates/jobs/live-test.yml
@@ -62,9 +62,34 @@ jobs:
       TestResourcesDirectory: $(Build.SourcesDirectory)/$(TestResourcesPath)
 
   - task: AzurePowershell@5
-    displayName: "Run tests - az pwsh"
+    displayName: "Run tests (stdio) - az pwsh"
     env:
-      AZURE_TEST_MODE: 'live'
+      SYSTEM_ACCESSTOKEN: $(System.AccessToken)
+      AZURE_MCP_COLLECT_TELEMETRY: 'false'
+    inputs:
+      azureSubscription: azure-sdk-tests-public
+      azurePowerShellVersion: 'LatestVersion'
+      scriptType: InlineScript
+      Inline: |
+        ./eng/scripts/Test-Code.ps1 `
+          -TestType 'Live' `
+          -Path $(PathToTest) `
+          -TestResultsPath '$(Build.ArtifactStagingDirectory)/testResults'
+
+        exit $LastExitCode
+      pwsh: true
+      workingDirectory: $(Build.SourcesDirectory)
+
+  - template: /eng/common/TestResources/deploy-test-resources.yml
+    parameters:
+      ServiceConnection: azure-sdk-tests-public
+      PersistOidcToken: true
+      TestResourcesDirectory: $(Build.SourcesDirectory)/$(TestResourcesPath)
+      AdditionalParameters: "@{ UseHttpTransport = true }"
+
+  - task: AzurePowershell@5
+    displayName: "Run tests (http) - az pwsh"
+    env:
       SYSTEM_ACCESSTOKEN: $(System.AccessToken)
       AZURE_MCP_COLLECT_TELEMETRY: 'false'
     inputs:
