--- a/servers/Azure.Mcp.Server/changelog-entries/1771350749741.yaml
+++ b/servers/Azure.Mcp.Server/changelog-entries/1771350749741.yaml
@@ -1,4 +1,4 @@
-pr: 2333
+pr: 1740
 changes:
   - section: "Other Changes"
-    description: "Updated .NET tooling to stable version: 10.0.100 to 10.0.103"
+    description: "Updated .NET tooling to stable version: 10.0.100 to 10.0.103.  Updated Microsoft.Azure.Kusto.Data and Microsoft.Azure.Kusto.Ingest to version 14.0.3."
