Modified scripts to use build_info.json files for mapping MCPB builds

--- a/eng/pipelines/templates/jobs/update-mcp-repository.yml
+++ b/eng/pipelines/templates/jobs/update-mcp-repository.yml
@@ -41,6 +41,7 @@ jobs:
           -ServerName '${{ parameters.ServerName }}'
           -McpbPath '$(Pipeline.Workspace)/packages_mcpb_signed/${{ parameters.ServerName }}'
           -ServerJsonPath '$(Pipeline.Workspace)/build_info/${{ parameters.ServerName }}/server.json'
+          -BuildInfoPath '$(Pipeline.Workspace)/build_info/build_info.json'
 
   - task: Powershell@2
     displayName: 'Verify Nuget package was published'
