--- a/eng/pipelines/templates/common.yml
+++ b/eng/pipelines/templates/common.yml
@@ -69,17 +69,25 @@ extends:
       jobs:
       - template: /eng/pipelines/templates/jobs/analyze.yml
 
-      - ${{ each arch in split('x64|arm64', '|') }}:
-        - ${{ each os in split('linux|windows|macOS', '|') }}:
-          - template: /eng/pipelines/templates/jobs/build.yml
-            parameters:
-              TestTimeoutInMinutes: ${{ parameters.TestTimeoutInMinutes }}
-              ServerName: ${{ parameters.ServerName }}
-              PublishTarget: ${{ parameters.PublishTarget }}
-              OSName: ${{ os }}
-              Matrix: stageDependencies.Initialize.Initialize.outputs['CreateBuildInfo.${{ os }}BuildMatrices.${{ arch }}']
-              MaxParallel: 4
-              HostArchitecture: ${{ arch }}
+      - ${{ each os in split('linux|windows|macOS', '|') }}:
+        - template: /eng/pipelines/templates/jobs/build.yml
+          parameters:
+            TestTimeoutInMinutes: ${{ parameters.TestTimeoutInMinutes }}
+            ServerName: ${{ parameters.ServerName }}
+            PublishTarget: ${{ parameters.PublishTarget }}
+            OSName: ${{ os }}
+            Matrix: stageDependencies.Initialize.Initialize.outputs['CreateBuildInfo.${{ os }}BuildMatrices.x64']
+            MaxParallel: 4
+
+      - template: /eng/pipelines/templates/jobs/build.yml
+        parameters:
+          TestTimeoutInMinutes: ${{ parameters.TestTimeoutInMinutes }}
+          ServerName: ${{ parameters.ServerName }}
+          PublishTarget: ${{ parameters.PublishTarget }}
+          OSName: linux
+          Matrix: stageDependencies.Initialize.Initialize.outputs['CreateBuildInfo.linuxBuildMatrices.arm64']
+          MaxParallel: 4
+          HostArchitecture: arm64
 
     - ${{ if and(eq(variables['System.TeamProject'], 'internal'), eq(parameters.RunLiveTests, 'true')) }}:
       - stage: Test
