--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -72,9 +72,9 @@
     <PackageVersion Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="10.0.2" />
     <PackageVersion Include="Microsoft.Extensions.Configuration.Json" Version="10.0.2" />
     <PackageVersion Include="Microsoft.Extensions.Caching.Hybrid" Version="9.5.0" />
-    <PackageVersion Include="Microsoft.Identity.Abstractions" Version="10.0.0" />
-    <PackageVersion Include="Microsoft.Identity.Web" Version="4.3.0" />
-    <PackageVersion Include="Microsoft.Identity.Web.Azure" Version="4.3.0" />
+    <PackageVersion Include="Microsoft.Identity.Abstractions" Version="11.0.0" />
+    <PackageVersion Include="Microsoft.Identity.Web" Version="4.4.0-preview.1" />
+    <PackageVersion Include="Microsoft.Identity.Web.Azure" Version="4.4.0-preview.1" />
     <PackageVersion Include="Microsoft.HybridRow" Version="1.1.0-preview4" />
     <PackageVersion Include="Microsoft.Azure.Cosmos.Aot" Version="0.1.4-preview.2" />
     <PackageVersion Include="Microsoft.Azure.Mcp.AzTypes.Internal.Compact" Version="0.2.804" />
