Try to use the connection

--- a/eng/pipelines/templates/common.yml
+++ b/eng/pipelines/templates/common.yml
@@ -52,110 +52,29 @@ extends:
       - template: /eng/pipelines/templates/variables/image.yml
       - template: /eng/pipelines/templates/variables/globals.yml
       jobs:
-      - template: /eng/pipelines/templates/jobs/initialize.yml
-        parameters:
-          ServerName: ${{ parameters.ServerName }}
-          PublishTarget: ${{ parameters.PublishTarget }}
-          IncludeNative: ${{ parameters.IncludeNative }}
-          IsTestPipeline: ${{ parameters.IsTestPipeline }}
+      - job: Initialize
+        steps:
+        - task: AzureCLI@2
+          name: UseSovIdentity
+          inputs:
+            azureSubscription: 'azure-mcp-gov-test'
+            addSpnToEnvironment: true
+            scriptType: 'pscore'
+            scriptLocation: 'inlineScript'
+            inlineScript: |
+              Write-Host "We have a running cli!"
+              $context = az account show
+              Write-Host "Current account context:"
+              Write-Host $context
 
-    - stage: Build
-      dependsOn:
-      - Initialize
-      pool:
-        name: $(LINUXPOOL)
-        image: $(LINUXVMIMAGE)
-        os: linux
-      variables:
-      - template: /eng/pipelines/templates/variables/image.yml
-      - template: /eng/pipelines/templates/variables/globals.yml
-      jobs:
-      - template: /eng/pipelines/templates/jobs/analyze.yml
+              Write-Host "az cloud set --name AzureUSGovernment"
+              az cloud set --name AzureUSGovernment
 
-      - ${{ each os in split('linux|windows|macOS', '|') }}:
-        - template: /eng/pipelines/templates/jobs/build.yml
-          parameters:
-            TestTimeoutInMinutes: ${{ parameters.TestTimeoutInMinutes }}
-            ServerName: ${{ parameters.ServerName }}
-            PublishTarget: ${{ parameters.PublishTarget }}
-            OSName: ${{ os }}
-            Matrix: stageDependencies.Initialize.Initialize.outputs['CreateBuildInfo.${{ os }}BuildMatrix']
-            MaxParallel: 4
+              Write-Host "Accessing storage using az cli. acct: pahallistest"
+              $storageAccountName = "pahallistest"
 
-    - ${{ if and(eq(variables['System.TeamProject'], 'internal'), eq(parameters.RunLiveTests, 'true')) }}:
-      - stage: Test
-        displayName: 'Live test'
-        dependsOn:
-        - Initialize
-        pool:
-          name: $(LINUXPOOL)
-          image: $(LINUXVMIMAGE)
-          os: linux
-        variables:
-        - template: /eng/pipelines/templates/variables/image.yml
-        - template: /eng/pipelines/templates/variables/globals.yml
-        jobs:
-        - template: /eng/pipelines/templates/jobs/live-test.yml
-          parameters:
-            Matrix: stageDependencies.Initialize.Initialize.outputs['CreateBuildInfo.liveTestMatrix']
-            MaxParallel: 10
-            TimeoutInMinutes: 75
+              Write-Host "az storage account list"
+              az storage account list --auth-mode login
 
-    - ${{ if ne(parameters.PublishTarget, 'none') }}:
-      # We only sign if we're going to publish
-      - stage: SignAndPack
-        displayName: 'Sign and Pack'
-        dependsOn:
-        - Initialize
-        - Build
-        pool:
-          name: $(LINUXPOOL)
-          image: $(LINUXVMIMAGE)
-          os: linux
-        variables:
-        - template: /eng/pipelines/templates/variables/image.yml
-        - template: /eng/pipelines/templates/variables/globals.yml
-        jobs:
-        - template: /eng/pipelines/templates/jobs/sign-and-pack.yml
-          parameters:
-            ServerMatrix: stageDependencies.Initialize.Initialize.outputs['CreateBuildInfo.serverMatrix']
-            PackageDocker: ${{ parameters.PackageDocker }}
-            PackageVSIX: ${{ parameters.PackageVSIX }}
-            PackagePyPI: ${{ parameters.PackagePyPI }}
-
-      - ${{ if eq(parameters.PublishTarget, 'public') }}:
-        - stage: Release
-          dependsOn:
-          - Initialize
-          - SignAndPack
-          pool:
-            name: $(LINUXPOOL)
-            image: $(LINUXVMIMAGE)
-            os: linux
-          variables:
-          - template: /eng/pipelines/templates/variables/image.yml
-          - template: /eng/pipelines/templates/variables/globals.yml
-          jobs:
-          - template: /eng/pipelines/templates/jobs/release.yml
-            parameters:
-              ServerName: ${{ parameters.ServerName }}
-              IncludeNative: false
-              PackageDocker: ${{ parameters.PackageDocker }}
-              PackageVSIX: ${{ parameters.PackageVSIX }}
-              PackagePyPI: ${{ parameters.PackagePyPI }}
-              IsTestPipeline: ${{ parameters.IsTestPipeline }}
-
-      - ${{ elseif eq(parameters.PublishTarget, 'internal') }}:
-        - stage: Integration
-          dependsOn:
-          - Initialize
-          - SignAndPack
-          pool:
-            name: $(LINUXPOOL)
-            image: $(LINUXVMIMAGE)
-            os: linux
-          variables:
-          - template: /eng/pipelines/templates/variables/image.yml
-          - template: /eng/pipelines/templates/variables/globals.yml
-          jobs:
-          - template: /eng/pipelines/templates/jobs/integration.yml
+              Write-Host "az storage blob list --account-name '$storageAccountName' --container-name `"stuff`"  --auth-mode login"
+              az storage blob list --account-name $storageAccountName --container-name "stuff" --auth-mode login
