--- a/servers/Azure.Mcp.Server/mcpb/manifest.json
+++ b/servers/Azure.Mcp.Server/mcpb/manifest.json
@@ -23,7 +23,7 @@
     "mcp_config": {
       "platform_overrides": {
         "win32": {
-          "command": "${__dirname}/server/azmcp.exe",
+          "command": "${__dirname}\\server\\azmcp.exe",
           "args": []
         }
       },
