Fix PyPI releases for Azure MCP Server

--- a/servers/Azure.Mcp.Server/build.yml
+++ b/servers/Azure.Mcp.Server/build.yml
@@ -9,7 +9,7 @@ parameters:
 - name: PackageVSIX
   type: boolean
   default: true
-- name: PackagePyPi
+- name: PackagePyPI
   type: boolean
   default: true
 - name: IncludeNative
@@ -31,5 +31,6 @@ extends:
     RunLiveTests: true
     PackageDocker: ${{ parameters.PackageDocker }}
     PackageVSIX: ${{ parameters.PackageVSIX }}
+    PackagePyPI: ${{ parameters.PackagePyPI }}
     IncludeNative: ${{ parameters.IncludeNative }}
     TestTimeoutInMinutes: ${{ parameters.TestTimeoutInMinutes }}
