--- a/servers/Fabric.Mcp.Server/build.yml
+++ b/servers/Fabric.Mcp.Server/build.yml
@@ -29,7 +29,7 @@ extends:
     ServerName: Fabric.Mcp.Server
     PublishTarget: ${{ parameters.PublishTarget }}
     RunLiveTests: true
-    PackagePyPi: false
+    PackagePyPI: false
     PackageDocker: ${{ parameters.PackageDocker }}
     PackageVSIX: ${{ parameters.PackageVSIX }}
     PackageMCPB: ${{ parameters.PackageMCPB }}
