--- a/servers/Template.Mcp.Server/build.yml
+++ b/servers/Template.Mcp.Server/build.yml
@@ -9,6 +9,9 @@ parameters:
 - name: PackageVSIX
   type: boolean
   default: false
+- name: PackagePyPI
+  type: boolean
+  default: false
 - name: PackageMCPB
   type: boolean
   default: false
@@ -31,6 +34,7 @@ extends:
     RunLiveTests: true
     PackageDocker: ${{ parameters.PackageDocker }}
     PackageVSIX: ${{ parameters.PackageVSIX }}
+    PackagePyPI: ${{ parameters.PackagePyPI }}
     PackageMCPB: ${{ parameters.PackageMCPB }}
     IncludeNative: ${{ parameters.IncludeNative }}
     TestTimeoutInMinutes: ${{ parameters.TestTimeoutInMinutes }}
