--- a/servers/Azure.Mcp.Server/changelog-entries/1771609048427.yaml
+++ b/servers/Azure.Mcp.Server/changelog-entries/1771609048427.yaml
@@ -1,4 +1,4 @@
 pr: 1658
 changes:
-  - section: "Other Changes"
+  - section: "Bugs Fixed"
     description: "Added validation logic for endpoint parameters in foundry tools"
