Add support to publish servers as MCP Bundles (#1681)
* Testing MCPB detached signing with ESRP

* Updated signing config

* Updated the pipeline to attach signature to .mcpb file and verify

* Fixed file extension

* Created design document

* Created script to pack MCP bundles and updated docs

* Removed test .mcpb file

* Updated packing scrip to update server version on manifest

* Reverted changes to common.yml

* Created other scripts to be used with ESRP signing

* Added unit tests

* Implemented phase 2

* Implemented phase 3

* Updated docs

* Added a manifest.json and server icon for the Template server

* Added a manifest.json and server icon for the Fabric MCP server

* Updated manifests for all server

* Updated eng docs and build.yml

* Updated .gitignore

* Updated release-mcpb.yml to use inline PowerShell

* Updated docs

* Refactor MCPB packaging pipeline: remove Windows pool specification and update .NET SDK usage

* Updated docs to clarify the correct signature format

* Attempt to fix .NET version issue with mcpb CLI

* Trying to fix issue with applying signature

* Added MCBP flag to Fabric build.yml

* Fix uploading MCPB files to GH release.

* Add internalModuleProxy feature flag for golang in 1es-redirect.yml

* Removed old test artifacts

* Added changelog entry

* Updated server.json for Azure and Template servers

* Removed unsupported arguments from server.json files

* Updated server.json scripts to support missing platforms

* Updated, renamed, and relocated design doc

* Applied Copilot feedback

* Updated version in Azure MCP Server manifest

* Fixed broken links

* Actually fixed broken links

* Applied some PR feedback

* Modified scripts to use build_info.json files for mapping MCPB builds

* Polished up server.json approach and updated .csproj files for the Azure and Template servers

* Removed unnecessary server icons

* Removed other usages of Write-Host in favor of using LogInfo

* Added a centralized .config/dotnet-tools.json 

--- a/eng/pipelines/templates/common.yml
+++ b/eng/pipelines/templates/common.yml
@@ -21,6 +21,9 @@ parameters:
 - name: PackagePyPI
   type: boolean
   default: false
+- name: PackageMCPB
+  type: boolean
+  default: false
 - name: TestTimeoutInMinutes
   type: number
   default: 30
@@ -122,6 +125,7 @@ extends:
             PackageDocker: ${{ parameters.PackageDocker }}
             PackageVSIX: ${{ parameters.PackageVSIX }}
             PackagePyPI: ${{ parameters.PackagePyPI }}
+            PackageMCPB: ${{ parameters.PackageMCPB }}
 
       - ${{ if eq(parameters.PublishTarget, 'public') }}:
         - stage: Release
@@ -143,6 +147,7 @@ extends:
               PackageDocker: ${{ parameters.PackageDocker }}
               PackageVSIX: ${{ parameters.PackageVSIX }}
               PackagePyPI: ${{ parameters.PackagePyPI }}
+              PackageMCPB: ${{ parameters.PackageMCPB }}
               IsTestPipeline: ${{ parameters.IsTestPipeline }}
 
       - ${{ elseif eq(parameters.PublishTarget, 'internal') }}:
