--- a/eng/pipelines/templates/jobs/sign-and-pack.yml
+++ b/eng/pipelines/templates/jobs/sign-and-pack.yml
@@ -7,6 +7,8 @@ parameters:
   type: boolean
 - name: PackagePyPI
   type: boolean
+- name: PackageMCPB
+  type: boolean
 
 jobs:
 - job: Sign
@@ -123,6 +125,11 @@ jobs:
 
 - ${{ if parameters.PackageVSIX }}:
   - template: /eng/pipelines/templates/jobs/vsix/pack-and-sign-vsix.yml
+    parameters:
+      DependsOn: Sign
+
+- ${{ if parameters.PackageMCPB }}:
+  - template: /eng/pipelines/templates/jobs/mcpb/pack-and-sign-mcpb.yml
     parameters:
       DependsOn: Sign
 
