--- a/eng/pipelines/templates/jobs/update-mcp-repository.yml
+++ b/eng/pipelines/templates/jobs/update-mcp-repository.yml
@@ -6,6 +6,8 @@ parameters:
   default: 'https://api.nuget.org/v3/index.json'
 - name: DependsOn
   type: object
+- name: PackageMCPB
+  type: boolean
 
 jobs:
 - job: BuildAndUpdateMcpRepository
@@ -24,6 +26,22 @@ jobs:
   - download: current
     displayName: Download build_info
     artifact: build_info
+
+  - ${{ if parameters.PackageMCPB }}:
+    - download: current
+      displayName: Download signed MCPB packages
+      artifact: packages_mcpb_signed
+
+    - task: Powershell@2
+      displayName: 'Update server.json with MCPB SHA256 hashes'
+      inputs:
+        pwsh: true
+        filePath: $(Build.SourcesDirectory)/eng/scripts/Update-ServerJsonMcpbHashes.ps1
+        arguments: >
+          -ServerName '${{ parameters.ServerName }}'
+          -McpbPath '$(Pipeline.Workspace)/packages_mcpb_signed/${{ parameters.ServerName }}'
+          -ServerJsonPath '$(Pipeline.Workspace)/build_info/${{ parameters.ServerName }}/server.json'
+          -BuildInfoPath '$(Pipeline.Workspace)/build_info/build_info.json'
 
   - task: Powershell@2
     displayName: 'Verify Nuget package was published'
