--- a/servers/Azure.Mcp.Server/build.yml
+++ b/servers/Azure.Mcp.Server/build.yml
@@ -12,6 +12,9 @@ parameters:
 - name: PackagePyPI
   type: boolean
   default: true
+- name: PackageMCPB
+  type: boolean
+  default: true
 - name: IncludeNative
   type: boolean
   default: true
@@ -32,5 +35,6 @@ extends:
     PackageDocker: ${{ parameters.PackageDocker }}
     PackageVSIX: ${{ parameters.PackageVSIX }}
     PackagePyPI: ${{ parameters.PackagePyPI }}
+    PackageMCPB: ${{ parameters.PackageMCPB }}
     IncludeNative: ${{ parameters.IncludeNative }}
     TestTimeoutInMinutes: ${{ parameters.TestTimeoutInMinutes }}
