--- a/servers/Azure.Mcp.Server/changelog-entries/1771830706972.yaml
+++ b/servers/Azure.Mcp.Server/changelog-entries/1771830706972.yaml
@@ -1,3 +1,3 @@
 changes:
   - section: "Bugs Fixed"
-    description: "Fixed error handling test to ensure error messages are preserved for missing parameters"
+    description: "Fixed error handling to ensure error messages are preserved for missing parameters"
