--- a/servers/Azure.Mcp.Server/changelog-entries/1771617105575.yaml
+++ b/servers/Azure.Mcp.Server/changelog-entries/1771617105575.yaml
@@ -1,3 +1,3 @@
 changes:
   - section: "Features Added"
-    description: "Added sovereign cloud endpoint support for Storage, Search, Postgres, ServiceFabric, Pricing, and Extension services"
+    description: "Added sovereign cloud endpoint support for AppLens, ApplicationInsights, AppService, AzureMigrate, ConfidentialLedger, Cosmos, Extension, Foundry, KeyVault, Kusto, Marketplace, Monitor, MySql, Postgres, Pricing, Quota, ResourceHealth, Search, ServiceFabric, Speech, and Storage services"
