Remove package parameters from build.yml and set default values directly

--- a/servers/Azure.Mcp.Server/build.yml
+++ b/servers/Azure.Mcp.Server/build.yml
@@ -3,18 +3,6 @@ parameters:
   type: string
   values: [ none, internal, public ]
   default: 'none'
-- name: PackageDocker
-  type: boolean
-  default: true
-- name: PackageVSIX
-  type: boolean
-  default: true
-- name: PackagePyPI
-  type: boolean
-  default: true
-- name: PackageMCPB
-  type: boolean
-  default: true
 - name: IncludeNative
   type: boolean
   default: true
@@ -32,9 +20,9 @@ extends:
     ServerName: Azure.Mcp.Server
     PublishTarget: ${{ parameters.PublishTarget }}
     RunLiveTests: true
-    PackageDocker: ${{ parameters.PackageDocker }}
-    PackageVSIX: ${{ parameters.PackageVSIX }}
-    PackagePyPI: ${{ parameters.PackagePyPI }}
-    PackageMCPB: ${{ parameters.PackageMCPB }}
+    PackageDocker: true
+    PackageVSIX: true
+    PackagePyPI: true
+    PackageMCPB: true
     IncludeNative: ${{ parameters.IncludeNative }}
     TestTimeoutInMinutes: ${{ parameters.TestTimeoutInMinutes }}
